--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -11,45 +11,45 @@ We are a team based in the http://www.comp.nus.edu.sg[School of Computing, Natio
 
 === Abhinav Ramnath
 image::ambhinav.png[width="150", align="left"]
-{empty}[https://github.com/ambhinav[github]] [<<johndoe#, portfolio>>]
+{empty}[https://github.com/ambhinav[github]] [<<ambhinav#, portfolio>>]
 
 Role: Team Lead +
-Responsibilities: Calendar Feature + Integration
+Responsibilities: Dashboard and settings Feature + Integration
 
 '''
 
 === Gabriel Seow
 image::gabrielseow.png[width="150", align="left"]
-{empty}[http://github.com/gabrielseow[github]] [<<johndoe#, portfolio>>]
+{empty}[http://github.com/gabrielseow[github]] [<<gabrielseow#, portfolio>>]
 
 Role: Developer +
-Responsibilities: Project DashBoard Feature + Testing
+Responsibilities: Calendar Feature + Testing
 
 '''
 
 === Seah Lynn
 image::seahlynn.png[width="150", align="left"]
-{empty}[http://github.com/seahlynn[github]] [<<johndoe#, portfolio>>]
+{empty}[http://github.com/seahlynn[github]] [<<seahlynn#, portfolio>>]
 
 Role: Developer +
-Responsibilities: Project Dashboard feature + Documentation
+Responsibilities: Members and Statistics feature + Documentation
 
 '''
 
 === Elizabeth Koh
-image::elsa.png[width="150", align="left"]
-{empty}[http://github.com/elsakoh[github]] [<<johndoe#, portfolio>>]
+image::elsakoh.png[width="150", align="left"]
+{empty}[http://github.com/elsakoh[github]] [<<elsakoh#, portfolio>>]
 
 Role: Developer +
-Responsibilities: Project Dashboard + Documentation
+Responsibilities: Auto-complete Feature + Documentation
 
 '''
 
 === Ravi Arun Kumarr
-image::arun.PNG[width="150", align="left"]
-{empty}[http://github.com/ArunBeCoding[github]] [<<johndoe#, portfolio>>]
+image::arunbecoding.png[width="150", align="left"]
+{empty}[http://github.com/ArunBeCoding[github]] [<<arunbecoding#, portfolio>>]
 
 Role: Developer +
-Responsibilities: Inventory and Storage feature
+Responsibilities: Inventory and Multi-Line command feature + Storage
 
 '''
